# projects

./: README.md
asx_equity_intelligence_agent/: README.md
asx_equity_intelligence_agent/agents/: forecasting_agent.py  strategy_agent.py
asx_equity_intelligence_agent/reports/: asx_brief_20260612.md
asx_trading_agent/: .env.example  .gitignore  README.md  asx_market_data.db  requirements.txt
asx_trading_agent/agents/: market_data_agent.py  orchestrator.py  report_writer_agent.py  requirements.txt  risk_agent.py
asx_trading_agent/reports/: asx_brief_20260611.md  asx_brief_20260623.md
aus_energy_automation/: README.md  requirements.txt
aus_energy_automation/scripts/: analyse_energy.py  clean_energy.py  config.py  fetch_energy.py  load_energy.py  run_pipeline.py
aus_energy_automation/sql/: aus_energy.sql
dfo_fashion_analytics/: README.md
dfo_fashion_analytics/docs/: dashboard_brief.md  data_preparation_log.md
dfo_sales/: README.md
dfo_sales/data/: data_dictionary.md
dfo_sales/data/cleaned/: clean_sales.csv
dfo_sales/power_bi/: dax_measures.md  dfo_sales.pbix  power_query_steps.md
market_analysis/: LICENSE  README.md  requirements.txt
market_analysis/data_cleaned/: aapl_us_clean.csv  bac_us_clean.csv  cop_us_clean.csv  cvx_us_clean.csv  gs_us_clean.csv  jnj_us_clean.csv  jpm_us_clean.csv  mrk_us_clean.csv  msft_us_clean.csv  nvda_us_clean.csv  pfe_us_clean.csv  xom_us_clean.csv
market_analysis/data_raw/: aapl_us.csv  bac_us.csv  cop_us.csv  cvx_us.csv  gs_us.csv  jnj_us.csv  jpm_us.csv  mrk_us.csv  msft_us.csv  nvda_us.csv  pfe_us.csv  xom_us.csv
market_analysis/python/: avg_daily_return.py  clean_data_aapl.py  clean_data_bac.py  clean_data_cop.py  clean_data_cvx.py  clean_data_gs.py  clean_data_jnj.py  clean_data_jpm.py  clean_data_mrk.py  clean_data_msft.py  clean_data_nvda.py  clean_data_pfe.py  clean_data_xom.py  connection_test.py  risk_vs_return.py
market_analysis/scripts/: avg_daily_return.py  clean_data.py  clean_data_aapl.py  clean_data_bac.py  clean_data_cop.py  clean_data_cvx.py  clean_data_gs.py  clean_data_jnj.py  clean_data_jpm.py  clean_data_mrk.py  clean_data_msft.py  clean_data_nvda.py  clean_data_pfe.py  clean_data_xom.py  config.py  load_data.py  risk_vs_return.py
market_analysis/sql/: market.sql  query.sql
messy_data_generator_Aus_housing/: README.md  aus_housing_messy_2021-2023_jan-dec_nsw-qld-vic.csv  messy_data_generator.py
nem_forecasting/: .env.example  .gitignore  README.md  app.py  requirements.txt  run_pipeline.py  setup.py
nem_forecasting/models/: xgboost_nem_price_model.joblib
nem_forecasting/sql/: create_tables.sql
nem_forecasting/src/: config.py  data_cleaning.py  data_ingestion.py  db_initialiser.py  db_utils.py  feature_engineering.py  model_training.py
qld-elective-surgery-optimiser/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
remote_work_productivity/: README.md  generate_dataset.py  remote_work_productivity.py  requirements.txt  synthetic_remote_work_data.csv
(+5 files in other folders)
